docs: add documentation for Delete Openings
